--- a/sgd-webapp/src/main/webapp/pages/gestion/ver-roles.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/gestion/ver-roles.xhtml
@@ -40,12 +40,12 @@
 								<i class="material-symbols-outlined">edit</i>
 							</h:commandLink>
 						</p:column>
-						<p:column styleClass="links-column">
-							<h:commandLink update="tableForm" styleClass="link-delete"
-								action="#{gestionController.borrarRol(r.id)}">
-								<i class="material-symbols-outlined">delete</i>
-							</h:commandLink>
-						</p:column>
+<!-- 						<p:column styleClass="links-column"> -->
+<!-- 							<h:commandLink update="tableForm" styleClass="link-delete" -->
+<!-- 								action="#{gestionController.borrarRol(r.id)}"> -->
+<!-- 								<i class="material-symbols-outlined">delete</i> -->
+<!-- 							</h:commandLink> -->
+<!-- 						</p:column> -->
 
 					</p:dataTable>
 				</h:form>
