--- a/sgd-webapp/src/main/webapp/pages/programas/revision.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/revision.xhtml
@@ -149,14 +149,20 @@
 
 							<div class="item">
 								<div class="sug-label">
-									<label class="item-label">Area temática por carrera</label>
+									<label class="item-label">Area de formación</label>
 									<button type="button" class="agregar-sug icon-button">
 										<i class="material-symbols-outlined">add</i>
 									</button>
 								</div>
 								<ui:repeat value="#{pCtrl.revisado.carreras}" var="c">
 									<div class="item">
-										<h:outputText value="#{c.nombre} - #{c.areaNombre}" />
+										<h:outputText value="#{c.nombre}" />
+										<ul class="item ul-list">
+											<ui:repeat value="#{pCtrl.revisado.areas}" var="a">
+												<li><h:outputText value="#{a.nombre}"
+														rendered="#{a.carreraId==c.id}" /></li>
+											</ui:repeat>
+										</ul>
 									</div>
 								</ui:repeat>
 								<div class="item sugerencia">
@@ -493,7 +499,10 @@
 										<i class="material-symbols-outlined">add</i>
 									</button>
 								</div>
-								<h:outputText value="#{pCtrl.revisado.objetivos}" />
+								<div class="item">
+									<h:outputText value="#{pCtrl.revisado.objetivos}"
+										escape="false" />
+								</div>
 								<div class="item sugerencia">
 									<div class="item">
 										<h:inputTextarea value="#{pCtrl.revision.objSug}"
@@ -514,7 +523,10 @@
 										<i class="material-symbols-outlined">add</i>
 									</button>
 								</div>
-								<h:outputText value="#{pCtrl.revisado.contenidos}" />
+								<div class="item">
+									<h:outputText value="#{pCtrl.revisado.contenidos}"
+										escape="false" />
+								</div>
 								<div class="item sugerencia">
 									<div class="item">
 										<h:inputTextarea value="#{pCtrl.revision.contSug}"
@@ -591,7 +603,10 @@
 										<i class="material-symbols-outlined">add</i>
 									</button>
 								</div>
-								<h:outputText value="#{pCtrl.revisado.descrMetodologia}" />
+								<div class="item">
+									<h:outputText value="#{pCtrl.revisado.descrMetodologia}"
+										escape="false" />
+								</div>
 								<div class="item sugerencia">
 									<div class="item">
 										<h:inputTextarea value="#{pCtrl.revision.metodologiaSug}"
@@ -725,7 +740,10 @@
 										<i class="material-symbols-outlined">add</i>
 									</button>
 								</div>
-								<h:outputText value="#{pCtrl.revisado.descrEvaluacion}" />
+								<div class="item">
+									<h:outputText value="#{pCtrl.revisado.descrEvaluacion}"
+										escape="false" />
+								</div>
 								<div class="item sugerencia">
 									<div class="item">
 										<h:inputTextarea value="#{pCtrl.revision.evaluacionSug}"
@@ -764,7 +782,8 @@
 									</p:column>
 
 									<p:column headerText="Material bibliográfico">
-										<h:outputText value="#{b.titulo}" styleClass="#{b.esTitulo ? 'item-label': ''}"/>
+										<h:outputText value="#{b.titulo}"
+											styleClass="#{b.esTitulo ? 'item-label': ''}" />
 									</p:column>
 								</p:dataTable>
 								<div class="item sugerencia">
@@ -787,7 +806,10 @@
 							</div>
 						</div>
 					</div>
-
+					<div class="usuario">
+						<label class="item-label">Creado por:</label>
+						<h:outputText value="#{pCtrl.nuevo.nombreUsuario}" />
+					</div>
 					<div class="buttons">
 						<div class="item">
 							<h:commandButton class="button_rojo button_large button"
