Config url formulario, ver programas segun adscripcion

--- a/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
@@ -489,7 +489,7 @@
 												Solo en casos excepcionales, docentes en grados de formación
 												(Gr. 1 y 2) podrán incluirse como Encargados/as de cursos.
 												Para ello, el/la Director/a de Carrera, deberá completar el
-												siguiente <a href="http://www.google.com" target="_blank">formulario</a>
+												siguiente <a href="#{pCtrl.linkFormulario}" target="_blank">formulario</a>
 												solicitando la autorización del Consejo de Facultad previo
 												al inicio de clases.
 											</p>
