--- a/sgd-webapp/src/main/webapp/pages/gestion/usuario.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/gestion/usuario.xhtml
@@ -97,6 +97,12 @@
 							</div>
 						</h:panelGroup>
 					</h:panelGroup>
+					
+					<h:panelGroup rendered="#{gestionController.edicionUsuario}">
+						<p class="atencion">
+							<i class="material-symbols-outlined">warning</i> Una vez se guardan los cambios, se verán reflejados cerrando e iniciando sesión nuevamente.
+						</p>
+					</h:panelGroup>
 					<div class="item">
 						<h:commandButton styleClass="button button_rojo button_large"
 							action="#{gestionController.agregarUsuario}" value="Guardar" />
