--- a/sgd-webapp/src/main/webapp/pages/programas/ver-programas.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/ver-programas.xhtml
@@ -27,7 +27,7 @@
 				</h:form>
 				<h:form id="tableForm">
 					<p:dataTable value="#{pCtrl.programasEnProceso}" var="p"
-						widgetVar="programasTable" styleClass="table"
+						widgetVar="programasTable" styleClass="table table-programas"
 						emptyMessage="No se encontraron programas"
 						filteredValue="#{pCtrl.programasFiltrados}"
 						filterBy="#{pCtrl.filterBy}" rows="10" paginator="true"
