--- a/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
+++ b/sgd-webapp/src/main/webapp/pages/programas/programa.xhtml
@@ -952,7 +952,8 @@
 								</h:panelGroup>
 							</h:panelGroup>
 							<div class="switch-button item">
-								<label class="item-label">Modo de aprobación</label>
+								<label class="item-label">Modo de aprobación<span
+									class="required">*</span></label>
 								<p class="ayuda">Seleccionar el modo de aprobación de la
 									unidad curricular.</p>
 								<div class="items-radio item">
